--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
         <title></title>
     </head>
     <body>
-        
+        <header> 
+
+        </header>
+        <div> 
+            <aside></aside>
+            <main></main>
+            <aside></aside>
+        </div>
     </body>
 </html>
