Atividade ID3 realizada: duplicada as paginas e feito os links

--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="estilo.css">
-        <title></title>
+        <title>pagina inicial</title>
     </head>
     <body>
         <header> 
-
+            
+            <nav>
+                <div><b>Home</b></div>
+                <div><a href="cursos.html">Cursos</a></div>
+                <div><a href="sobre.html">Sobre</a></div>
+                <div>Imagem</div>
+            </nav>
         </header>
         <div> 
-            <aside></aside>
+            <aside>para saber mais sobre os cursos  clique aqui</aside>
             <main></main>
             <aside></aside>
         </div>
